--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ img {
   position: absolute;
   bottom: -26px;
   right: 0px;
-  width: 2880px;
+  width: 3880px;
   height: 26px;
   z-index: 100;
   background-image: url("../img/ten.png");
@@ -630,7 +630,7 @@ img {
     margin-right: 20px;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
   .adress__wrapper {
     width: 1180px;
   }
@@ -790,7 +790,7 @@ img {
     display: block;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
   .main-nav {
     font-size: 20px;
   }
@@ -858,6 +858,9 @@ img {
     padding-bottom: 7px;
   }
 }
+.page-main {
+  background-color: #eff8fc;
+}
 @media (min-width: 760px) {
   .page-main {
     display: -webkit-box;
@@ -869,7 +872,7 @@ img {
             flex-direction: column;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
   .page-main {
     margin-left: auto;
     margin-right: auto;
@@ -1165,11 +1168,13 @@ img {
 .sub-nav__item {
   background-color: #ffffff;
   position: relative;
-  width: 280px;
   margin-left: 30px;
   margin-top: 30px;
   -webkit-box-shadow: 0px 5px 15px 0 rgba(41, 52, 73, 0.3);
           box-shadow: 0px 5px 15px 0 rgba(41, 52, 73, 0.3);
+}
+.sub-nav__item:last-child {
+  margin-right: 30px;
 }
 .sub-nav__link {
   text-decoration: none;
@@ -1178,7 +1183,6 @@ img {
   font-weight: bold;
   text-align: center;
   display: block;
-  width: 280px;
   padding-top: 10px;
   padding-bottom: 15px;
 }
@@ -1194,8 +1198,8 @@ img {
   content: "";
   position: absolute;
   bottom: -26px;
-  right: 0px;
-  width: 2880px;
+  right: -500px;
+  width: 3880px;
   height: 26px;
   z-index: 100;
   background-image: url("../img/ten.png");
@@ -1211,6 +1215,32 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+@media (min-width: 760px) {
+  .sub-nav__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .sub-nav__link {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+@media (min-width: 1280px) {
+  .sub-nav-wrapper {
+    background-color: #eff8fc;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .sub-nav__list {
+    max-width: 2560px;
+  }
+  .sub-nav__item {
+    width: 100%;
   }
 }
 
