--- a/css/style.css
+++ b/css/style.css
@@ -890,6 +890,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background-color: #ffffff;
 }
 .slider {
   /* устанавливаем относительное позиционирование элементу */
