--- a/css/style.css
+++ b/css/style.css
@@ -1729,6 +1729,7 @@ img {
   width: 100%;
   z-index: 99;
   cursor: pointer;
+  display: none;
 }
 .banner-bottom .banner-bottom__wrapper {
   display: -webkit-box;
